--- a/index.html
+++ b/index.html
@@ -6,37 +6,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
+
 <body>
   <header class="header">
-    <nav class="navigation">
-        <a class="logo primary link" href="./index.html" aria-label="логотип сайта" lang="en"><span class="logo-accent">Web</span>Studio</a>
-        <ul class="site-nav list">
-            <li class="site-nav-item">
-                <a class="link current" href="#">Студия</a>
-            </li>
-            <li class="site-nav-item">
-                <a class="link" href="./portfolio.html">Портфолио</a>
-            </li>
-            <li class="site-nav-item">
-                <a class="link" href="#">Контакты</a>
-            </li>
-        </ul>
-    </nav>
-    <address>
-        <ul class="address-nav list">
-            <li>
-                <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-                <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-        </ul>
-    </address>
+    <div class="container">
+        <nav class="navigation">
+            <a class="logo primary link" href="./index.html" aria-label="логотип сайта" lang="en"><span class="logo-accent">Web</span>Studio</a>
+            <ul class="site-nav list">
+                <li class="site-nav-item">
+                    <a class="link current" href="#">Студия</a>
+                </li>
+                <li class="site-nav-item">
+                    <a class="link" href="./portfolio.html">Портфолио</a>
+                </li>
+                <li class="site-nav-item">
+                    <a class="link" href="#">Контакты</a>
+                </li>
+            </ul>
+        </nav>
+        <address class="header-address">
+            <ul class="address-nav list">
+                <li class="address-nav-item">
+                    <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="address-nav-item">
+                    <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+            </ul>
+        </address>
+    </div>
   </header>
   <main>
 
@@ -48,90 +52,104 @@
 
     <!-- ADVANTAGES -->
     <section class="section">
-        <h2 class="visually-hidden">Преимущества работы со студией</h2>
-        <ul class="list">
-            <li>
-                <h3>Внимание к деталям</h3>
-                <p class="section-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-            </li>
-            <li>
-                <h3>Пунктуальность</h3>
-                <p class="section-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-            </li>
-            <li>
-                <h3>Планирование</h3>
-                <p class="section-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-            </li>
-            <li>
-                <h3>Современные технологии</h3>
-                <p class="section-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-            </li>
-        </ul>
-    </section>
+        <div class="container">
+            <h2 class="visually-hidden">Преимущества работы со студией</h2>
+            <ul class="advatnages list">
+                <li class="advantages-item">
+                    <h3 class="advantages-item-title">Внимание к деталям</h3>
+                    <p class="section-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li class="advantages-item">
+                    <h3 class="advantages-item-title">Пунктуальность</h3>
+                    <p class="section-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li class="advantages-item">
+                    <h3 class="advantages-item-title">Планирование</h3>
+                    <p class="section-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li class="advantages-item">
+                    <h3 class="advantages-item-title">Современные технологии</h3>
+                    <p class="section-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
 
     <!-- GALLERY -->
-    <section class="section">
-        <h2>Чем мы занимаемся</h2>
-        <ul class="list">
-            <li>
-                <img src="./images/gallery/gallery-img-1.png" alt="Разработка сайта" width="370" height="294">
-            </li>
-            <li>
-                <img src="./images/gallery/gallery-img-2.png" alt="Разработка макетов для мобильных устройств" width="370" height="294">
-            </li>
-            <li>
-                <img src="./images/gallery/gallery-img-3.png" alt="Выбор цвета на палитре" width="370" height="294">
-            </li>
-        </ul>
+            <h2 class="section-title">Чем мы занимаемся</h2>
+            <ul class="gallery list">
+                <li class="gallery-item">
+                    <img src="./images/gallery/gallery-img-1.png" alt="Разработка сайта" width="370" height="294">
+                </li>
+                <li class="gallery-item">
+                    <img src="./images/gallery/gallery-img-2.png" alt="Разработка макетов для мобильных устройств" width="370"
+                        height="294">
+                </li>
+                <li class="gallery-item">
+                    <img src="./images/gallery/gallery-img-3.png" alt="Выбор цвета на палитре" width="370" height="294">
+                </li>
+            </ul>
+        </div> 
     </section>
 
     <!-- OUR TEAM -->
-    <section class="section">
-        <h2>Наша команда</h2>
-        <ul class="team list">
-            <li>
-                <img src="./images/team/team-img-1.jpg" alt="Игорь Демьяненко улыбается" width="270" height="260">
-                <h3 class="team-name">Игорь Демьяненко</h3>
-                <p class="section-text position" lang="en">Product Designer</p>
-            </li>
-            <li>
-                <img src="./images/team/team-img-2.jpg" alt="Ольга Репина улыбается" width="270" height="260">
-                <h3 class="team-name">Ольга Репина</h3>
-                <p class="section-text position" lang="en">Frontend Developer</p>
-            </li>
-            <li>
-                <img src="./images/team/team-img-3.jpg" alt="Николай Тарасов улыбается" width="270" height="260">
-                <h3 class="team-name">Николай Тарасов</h3>
-                <p class="section-text position" lang="en">Marketing</p>
-            </li>
-            <li>
-                <img src="./images/team/team-img-4.jpg" alt="Михаил Ермаков улыбается" width="270" height="260">
-                <h3 class="team-name">Михаил Ермаков</h3>
-                <p class="section-text position" lang="en">UI Designer</p>
-            </li>
-        </ul>
+    <section class="team section">
+        <div class="container">
+            <h2 class="section-title">Наша команда</h2>
+            <ul class="team-members list">
+                <li class="team-item">
+                    <img class="team-img" src="./images/team/team-img-1.jpg" alt="Игорь Демьяненко улыбается" width="270" height="260">
+                    <div class="team-item-info">
+                        <h3 class="team-name">Игорь Демьяненко</h3>
+                        <p class="section-text position" lang="en">Product Designer</p>
+                    </div>
+                </li>
+                <li class="team-item">
+                    <img class="team-img" src="./images/team/team-img-2.jpg" alt="Ольга Репина улыбается" width="270" height="260">
+                    <div class="team-item-info">
+                        <h3 class="team-name">Ольга Репина</h3>
+                        <p class="section-text position" lang="en">Frontend Developer</p>
+                    </div>
+                </li>
+                <li class="team-item">
+                    <img class="team-img" src="./images/team/team-img-3.jpg" alt="Николай Тарасов улыбается" width="270" height="260">
+                    <div class="team-item-info">
+                        <h3 class="team-name">Николай Тарасов</h3>
+                         <p class="section-text position" lang="en">Marketing</p>
+                    </div>
+                </li>
+                <li class="team-item">
+                    <img class="team-img" src="./images/team/team-img-4.jpg" alt="Михаил Ермаков улыбается" width="270" height="260">
+                    <div class="team-item-info">
+                        <h3 class="team-name">Михаил Ермаков</h3>
+                        <p class="section-text position" lang="en">UI Designer</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </section>
   </main>
   <footer>
 
       <!-- CONTACT INFORMATION -->
     <section class="contacts">
-        <h2 class="visually-hidden">Контакты</h2>
-        <a class="logo secondary link" href="./index.html" aria-label="логотип сайта" lang="en"><span class="logo-accent">Web</span>Studio</a>
-        <address>
-            <ul class="footer-address list">
-                <li>
-                    <!-- Сменил "проспект" на "бульвар", т.к. проспект Леси Украинки в Киеве нет -->
-                    <a class="contacts-map link" href="https://goo.gl/maps/AZEBeKzeeW1Fva8DA" target="_blank" rel="noopener noreferrer">г. Киев, б-р Леси Украинки, 26</a>
-                </li>
-                <li>
-                    <a class="link email" href="mailto:info@example.com">info@example.com</a>
-                </li>
-                <li>
-                    <a class="link phone" href="tel:+380991111111">+38 099 111 11 11</a>
-                </li>
-            </ul>
-        </address>
+        <div class="container">
+            <h2 class="visually-hidden">Контакты</h2>
+            <a class="logo secondary link" href="./index.html" aria-label="логотип сайта" lang="en"><span class="logo-accent">Web</span>Studio</a>
+            <address>
+                <ul class="footer-address list">
+                    <li class="footer-address-item">
+                        <!-- Сменил "проспект" на "бульвар", т.к. проспект Леси Украинки в Киеве нет -->
+                        <a class="contacts-map link" href="https://goo.gl/maps/AZEBeKzeeW1Fva8DA" target="_blank"
+                            rel="noopener noreferrer">г. Киев, б-р Леси Украинки, 26</a>
+                    </li>
+                    <li class="footer-address-item">
+                        <a class="link email" href="mailto:info@example.com">info@example.com</a>
+                    </li>
+                    <li class="footer-address-item">
+                        <a class="link phone" href="tel:+380991111111">+38 099 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </section>
   </footer>
 </body>
