--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
@@ -13,132 +14,159 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a class="logo primary link" href="./index.html" aria-label="логотип сайта" lang="en"><span class="logo-accent">Web</span>Studio</a>
-            <ul class="site-nav list">
-                <li>
-                    <a class="link" href="./index.html">Студия</a>
-                </li>
-                <li>
-                    <a class="link current" href="./portfolio.html">Портфолио</a>
-                </li>
-                <li>
-                    <a class="link" href="#">Контакты</a>
-                </li>
-            </ul>
-        </nav>
-        <address>
-            <ul class="address-nav list">
-                <li>
-                    <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-                </li>
-            </ul>
-        </address>
+    <header class="header">
+        <div class="container">
+            <nav class="navigation">
+                <a class="logo primary link" href="./index.html" aria-label="логотип сайта" lang="en"><span
+                        class="logo-accent">Web</span>Studio</a>
+                <ul class="site-nav list">
+                    <li class="site-nav-item">
+                        <a class="link" href="./index.html">Студия</a>
+                    </li>
+                    <li class="site-nav-item">
+                        <a class="link current" href="./portfolio.html">Портфолио</a>
+                    </li>
+                    <li class="site-nav-item">
+                        <a class="link" href="#">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+            <address class="header-address">
+                <ul class="address-nav list">
+                    <li class="address-nav-item">
+                        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                    </li>
+                    <li class="address-nav-item">
+                        <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </header>
     <main>
-        <section>
-            <h1 class="visually-hidden">Наши работы</h1>
-            <ul class="categories list">
-                <li><button class="category-button" type="button">Веб-сайты</button></li>
-                <li><button class="category-button" type="button">Приложения</button></li>
-                <li><button class="category-button" type="button">Дизайн</button></li>
-                <li><button class="category-button" type="button">Все</button></li>
-                <li><button class="category-button" type="button">Маркетинг</button></li>
-            </ul>
-            <ul class="projects list">
-                <li>
-                    <a class="link" href="#">
-                        <img src="./images/portfolio/portfolio-img-1.jpg" alt="Вебсайт Технокряк" width="370" height="294">
-                        <h2 class="projects-title">Технокряк</h2>
-                        <p class="projects-text">Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="#">
-                        <img src="./images/portfolio/portfolio-img-2.jpg" alt="Дизайн постера" width="370" height="294">
-                        <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
-                        <p class="projects-text">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="#">
-                        <img src="./images/portfolio/portfolio-img-3.jpg" alt="Приложение для ресторана" width="370" height="294">
-                        <h2 class="projects-title">Ресторан Seafood</h2>
-                        <p class="projects-text">Приложение</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="#">
-                        <img src="./images/portfolio/portfolio-img-4.jpg" alt="Маркетинг проект Prime" width="370" height="294">
-                        <h2 class="projects-title">Проект Prime</h2>
-                        <p class="projects-text">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="">
-                        <img src="./images/portfolio/portfolio-img-5.jpg" alt="Приложение для проекта Boxes" width="370" height="294">
-                        <h2 class="projects-title link">Проект Boxes</h2>
-                        <p class="projects-text">Приложение</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="#">
-                        <img src="./images/portfolio/portfolio-img-6.jpg" alt="Вебсайт Inspiration has no Borders" width="370" height="294">
-                        <h2 class="projects-title">Inspiration has no Borders</h2>
-                        <p class="projects-text">Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="#">
-                        <img src="./images/portfolio/portfolio-img-7.jpg" alt="Дизайн для издания Limited Edition" width="370" height="294">
-                        <h2 class="projects-title">Издание Limited Edition</h2>
-                        <p class="projects-text">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="#">
-                        <img src="./images/portfolio/portfolio-img-8.jpg" alt="Маркетинг для Проекта LAB " width="370" height="294">
-                        <h2 class="projects-title">Проект LAB</h2>
-                        <p class="projects-text">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="#">
-                        <img src="./images/portfolio/portfolio-img-9.jpg" alt="Приложение для Growing Business" width="370" height="294">
-                        <h2 class="projects-title">Growing Business</h2>
-                        <p class="projects-text">Приложение</p>
-                    </a>
-                </li>
-            </ul>
+
+        <!-- WORKS -->
+        <section class="works section">
+            <div class="container">
+                <h1 class="visually-hidden">Наши работы</h1>
+                <ul class="categories list">
+                    <li class="categories-item"><button class="category-button" type="button">Все</button></li>
+                    <li class="categories-item"><button class="category-button" type="button">Веб-сайты</button></li>
+                    <li class="categories-item"><button class="category-button" type="button">Приложения</button></li>
+                    <li class="categories-item"><button class="category-button" type="button">Дизайн</button></li>
+                    <li class="categories-item"><button class="category-button" type="button">Маркетинг</button></li>
+                </ul>
+                <ul class="projects list">
+                    <li class="projects-item">
+                        <a class="projects-item link link" href="#">
+                            <img src="./images/portfolio/portfolio-img-1.jpg" alt="Вебсайт Технокряк" width="370" height="294">
+                            <div class="card-content">
+                                <h2 class="projects-title">Технокряк</h2>
+                                <p class="projects-text">Веб-сайт</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="projects-item">
+                        <a class="projects-item link link" href="#">
+                            <img src="./images/portfolio/portfolio-img-2.jpg" alt="Дизайн постера" width="370" height="294">
+                            <div class="card-content">
+                                <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
+                                <p class="projects-text">Дизайн</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="projects-item">
+                        <a class="projects-item link link" href="#">
+                            <img src="./images/portfolio/portfolio-img-3.jpg" alt="Приложение для ресторана" width="370" height="294">
+                            <div class="card-content">
+                                <h2 class="projects-title">Ресторан Seafood</h2>
+                                <p class="projects-text">Приложение</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="projects-item">
+                        <a class="projects-item link link" href="#">
+                            <img src="./images/portfolio/portfolio-img-4.jpg" alt="Маркетинг проект Prime" width="370" height="294">
+                            <div class="card-content">
+                                <h2 class="projects-title">Проект Prime</h2>
+                                <p class="projects-text">Маркетинг</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="projects-item">
+                        <a class="projects-item link link" href="">
+                            <img src="./images/portfolio/portfolio-img-5.jpg" alt="Приложение для проекта Boxes" width="370" height="294">
+                            <div class="card-content">
+                                <h2 class="projects-title link">Проект Boxes</h2>
+                                <p class="projects-text">Приложение</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="projects-item">
+                        <a class="projects-item link link" href="#">
+                            <img src="./images/portfolio/portfolio-img-6.jpg" alt="Вебсайт Inspiration has no Borders" width="370" height="294">
+                            <div class="card-content">
+                                <h2 class="projects-title">Inspiration has no Borders</h2>
+                                <p class="projects-text">Веб-сайт</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="projects-item">
+                        <a class="projects-item link link" href="#">
+                            <img src="./images/portfolio/portfolio-img-7.jpg" alt="Дизайн для издания Limited Edition" width="370" height="294">
+                            <div class="card-content">
+                                <h2 class="projects-title">Издание Limited Edition</h2>
+                                <p class="projects-text">Дизайн</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="projects-item">
+                        <a class="projects-item link link" href="#">
+                            <img src="./images/portfolio/portfolio-img-8.jpg" alt="Маркетинг для Проекта LAB " width="370" height="294">
+                            <div class="card-content">
+                                <h2 class="projects-title">Проект LAB</h2>
+                                <p class="projects-text">Маркетинг</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="projects-item">
+                        <a class="projects-item link link" href="#">
+                            <img src="./images/portfolio/portfolio-img-9.jpg" alt="Приложение для Growing Business" width="370" height="294">
+                            <div class="card-content">
+                                <h2 class="projects-title">Growing Business</h2>
+                                <p class="projects-text">Приложение</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer>
     
         <!-- CONTACT INFORMATION -->
         <section class="contacts">
-            <h2 class="visually-hidden">Контакты</h2>
-            <a class="logo secondary link" href="./index.html" aria-label="логотип сайта" lang="en"><span
-                    class="logo-accent">Web</span>Studio</a>
-            <address>
-                <ul class="footer-address list">
-                    <li>
-                        <!-- Сменил "проспект" на "бульвар", т.к. проспект Леси Украинки в Киеве нет -->
-                        <a class="contacts-map link" href="https://goo.gl/maps/AZEBeKzeeW1Fva8DA" target="_blank"
-                            rel="noopener noreferrer">г. Киев, б-р Леси Украинки, 26</a>
-                    </li>
-                    <li>
-                        <a class="link email" href="mailto:info@example.com">info@example.com</a>
-                    </li>
-                    <li>
-                        <a class="link phone" href="tel:+380991111111">+38 099 111 11 11</a>
-                    </li>
-                </ul>
-            </address>
+            <div class="container">
+                <h2 class="visually-hidden">Контакты</h2>
+                <a class="logo secondary link" href="./index.html" aria-label="логотип сайта" lang="en"><span
+                        class="logo-accent">Web</span>Studio</a>
+                <address>
+                    <ul class="footer-address list">
+                        <li class="footer-address-item">
+                            <!-- Сменил "проспект" на "бульвар", т.к. проспект Леси Украинки в Киеве нет -->
+                            <a class="contacts-map link" href="https://goo.gl/maps/AZEBeKzeeW1Fva8DA" target="_blank"
+                                rel="noopener noreferrer">г. Киев, б-р Леси Украинки, 26</a>
+                        </li>
+                        <li class="footer-address-item">
+                            <a class="link email" href="mailto:info@example.com">info@example.com</a>
+                        </li>
+                        <li class="footer-address-item">
+                            <a class="link phone" href="tel:+380991111111">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
         </section>
     </footer>
-</body>
+  </body>
 </html>
